# ledger-flow

./: .gitignore  53.22A ChatGPT research on budgeting.md  AGENT_RULES.md  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  DECISIONS.md  README.md  ROADMAP.md  SETUP_REVAMP.md  TASK.md  coffee_expense.dc  config.toml  justfile  package.json  pnpm-lock.yaml  progress.txt  reports.toml  requirements.txt
app/backend/: IMPORT_RULES.md  ledger_flow_cli.py  main.py  models.py  pyproject.toml
app/backend/ledger_flow_frontend/: __init__.py
app/backend/services/: account_declaration_service.py  account_register_service.py  activity_service.py  archive_service.py  backup_service.py  category_suggestion_service.py  commodity_service.py  config_service.py  csv_normalizer.py  currency_parser.py  custom_csv_service.py  dashboard_service.py  direction_service.py  event_log_service.py  git_snapshot_service.py  header_parser.py  import_history_service.py  import_identity_service.py  import_index.py  import_profile_service.py  import_service.py  institution_registry.py  journal_block_service.py  journal_migration_service.py  journal_query_service.py  journal_syntax.py  journal_writer.py  ledger_runner.py  manual_entry_service.py  manual_transfer_resolution_service.py  merchant_service.py  opening_balance_service.py  operation_dump_service.py  operations_service.py  payee_alias_service.py  payee_similarity.py  projection_db.py  projection_service.py  reconciliation_context_service.py  reconciliation_duplicate_service.py  (+13 more)
app/backend/tests/: conftest.py  test_account_declarations.py  test_cli.py  (+70 more)
(+270 files in other folders)
