[project]
name = "ledger-flow"
version = "0.1.0"
description = "Local API for ledger import and unknown-account reconciliation"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "pydantic>=2.11.0",
  "python-dateutil>=2.9.0",
  "python-multipart>=0.0.20"
]

[project.scripts]
ledger-flow = "ledger_flow_cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.4.0", "httpx>=0.28.0"]

[tool.setuptools]
py-modules = ["ledger_flow_cli", "main", "models"]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.setuptools.package-data]
ledger_flow_frontend = ["static/**/*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
